modified:   GTAV-mods.json 	modified:   index.html 	modified:   main.js 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
   </head>
   <body>
+    <h1 align="center">GTA V mods list</h1>
+
+    <div class="btn"><button id="btn">Get Mods</button></div>
+
     <div class="content"></div>
     <script src="main.js"></script>
   </body>
