--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <h1 align="center">GTA V mods list</h1>
 
     <div class="btn"><button id="btn">Get Mods</button></div>
+    <div class="container"><div class="content"></div></div>
 
-    <div class="content"></div>
     <script src="main.js"></script>
   </body>
 </html>
